objects/InterviewQuestion__c/InterviewQuestion__c.object-meta.xml
<CustomObject>
    <description>Contains the questions for the Lead, Account</description>
    <label>InterviewQuestion</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>InterviewQuestion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InterviewQuestion</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>