objects/InterviewQuestion__c/fields/ProspectType__c.field-meta.xml
<CustomField>
    <fullName>ProspectType__c</fullName>
    <label>ProspectType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>