objects/InterviewQuestion__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>