objects/InterviewQuestion__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <description>Sort</description>
    <label>Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>