objects/InterviewQuestion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Country__c</columns>
    <columns>Language__c</columns>
    <columns>ProspectType__c</columns>
    <columns>Question__c</columns>
    <columns>Sort__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>